# Quad_opt

./: README.md  key  key.pub
src/: JointStiffnessPlugin.cpp
src/fullurdf2/: CMakeLists.txt  package.xml
src/fullurdf2/config/: joint_names_fullurdf2.yaml
src/fullurdf2/launch/: control.launch  display.launch  gazebo.launch  robot_description.launch
src/fullurdf2/meshes/: sec03.STL  sec04.STL  sec05.STL  sec08.STL  sec09.STL  sec10.STL  sec12.STL  sec20.STL  sec30.STL  sec31.STL  sec32.STL  sec37.STL  sec38.STL  sec40.STL  sec42.STL  sec50.STL
src/fullurdf2/scripts/: back.py  back01.py  change_damping.py  change_stiffness.py  change_stiffness_and_damping.py  damping_value.py  differentleg.py  friction_value.py  legonetime.py  legs.py  stiffness_value.py
src/fullurdf2/srv/: SetDamping.srv  SetStiffness.srv
src/fullurdf2/urdf/: fullurdf2.csv  fullurdf2.urdf  fullurdf2.urdf_Zone.Identifier
src/fullurdf3/: CMakeLists.txt  package.xml
src/fullurdf3/config/: joint_names_fullurdf3.yaml  joint_names_fullurdf3.yaml:Zone.Identifier
src/fullurdf3/launch/: control.launch  control.launch:Zone.Identifier  display.launch  empty_world.launch  gazebo.launch  robot_description.launch
src/fullurdf3/meshes/: base02.STL  base_link.STL  sec01.STL  sec02.STL  sec06.STL  sec07.STL  sec20.STL  sec22.STL  sec30.STL  sec31.STL  sec33.STL  sec34.STL  sec35.STL  sec36.STL  sec40.STL  sec41.STL  sec42.STL  sec43.STL  sec44.STL  sec48.STL  sec49.STL  sec50.STL
src/fullurdf3/scripts/: back.py  backonetime.py  base.py  baseback.py  basefront.py  bendingangle.py  bendingangle.py:Zone.Identifier  change_damping.py  change_stiffness.py  change_stiffness_and_damping.py  damping_value.py  damping_value_base.py  differentleg.py  friction_value.py  friction_value_base.py  initialization.py  legonetime.py  opt_test.py  optimization.py  optimization2.py  paramater_test.py  stiffness_value.py  stiffness_value_base.py
src/fullurdf3/urdf/: fullurdf3.csv  fullurdf3.urdf
src/fullurdf3/worlds/: empty1.world
src/softactuator/: CMakeLists.txt  CMakeLists.txt.save  CMakeLists.txt.save.1  Readme  package.xml  test.perspective
src/softactuator/config/: joint_names_softactuator.yaml
src/softactuator/launch/: control.launch  display.launch  display.launch_Zone.Identifier  gazebo.launch  robot_description.launch
src/softactuator/meshes/: base_link.STL  sec01.STL  sec02.STL  sec03.STL  sec10.STL
src/softactuator/scripts/: back.py  bodymotion.py  bodymotion.py_Zone.Identifier  change_damping.py  change_stiffness.py  change_stiffness_and_damping.py  damping_value.py  friction_value.py  increment.py  pid.py  plot_joint11_z.py  positive.py  print_link_names.py  pyStiffnessPlugin.py  reset.py  reset2.py  setstiffness.py  stiffness.py  stiffness_value.py  testmotion.py  zero.py
src/softactuator/srv/: SetFriction.srv
src/softactuator/urdf/: softactuator.csv  softactuator.urdf
